testsuite/tests/warnings/should_fail/IncompleteUniPatterns.stderr

IncompleteUniPatterns.hs:7:11: error:
    Pattern match(es) are non-exhaustive
    In a pattern binding: Patterns of type ‘String’ not matched: []
